[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ds9-web"
version = "0.1.0"
description = "Launch SAOImageDS9 in the browser via Xpra"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Benny" },
]
keywords = ["astronomy", "ds9", "fits", "xpra", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/benny/ds9-web"
Issues = "https://github.com/benny/ds9-web/issues"

[project.scripts]
ds9-web = "ds9_web.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
